--- a/02_css_ex_06.html
+++ b/02_css_ex_06.html
@@ -2,9 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>CSS 연습 6 - 폰트 CSS</title>
+  <style>
+    p{
+      font-family:"맑은 고딕", "굴림", sans-serif;
+      /* 1) 글꼴 종류 선택 시 여러개의 글꼴 이름을 사용하면 차례대로 폰트를 찾아서 적용
+         2) 글꼴 종류 선택 시 반드시 마지막에 기본글꼴을 사용해야 함*/
+
+      font-size:13px; /* 13px 은 문서의 10pt 와 동일하다 */
+      font-weight:bold;
+      font-style:italic;
+      line-height:1.6; /* 줄간격은 단위를 쓰지 않는 실수 형태 주로 사용
+                          폰트크기의 배수로 표현( em과 비슷 ) ex) line-height:1.6; -> 13px 의 1.6배*/
+    }
+  </style>
 </head>
 <body>
 
+
+<p>
+  무엇을 충분히 청춘의 보배를 피부가 인생에 뿐이다. 충분히 대중을 무엇을 만천하의 용기가 피다. 앞이 바로 투명하되 천하를 꽃이 소담스러운 설레는 봄바람이다. 이것을 같은 것이 일월과 심장은 피부가 아름다우냐? 석가는 우리의 내려온 청춘이 있음으로써 꽃이 자신과 ? 구하지 석가는 끝에 동산에는 그러므로 황금시대다. 얼음에 부패를 그들을 위하여, 광야에서 청춘 때문이다. 것은 봄날의 이상 할지니, 이상은 피다. 하는 인간의 싸인 설산에서 천하를 위하여 고동을 때에, 듣는다. 방황하여도, 그들은 넣는 두기 사막이다. 인생에 열락의 작고 이상이 평화스러운 사막이다. 열락의 곳으로 할지라도 긴지라 위하여, 일월과 풀이 없는 칼이다.
+</p>
+
+<p>
+    얼마나 수 기쁘며, 있는 방황하여도, 길을 우리는 같으며, ? 되려니와, 품으며, 방황하였으며, 듣기만 황금시대의 이상의 끓는다. 구하지 천지는 내는 이상은 공자는 유소년에게서 가치를 칼이다. 많이 못하다 천지는 같으며, 소담스러운 것이다. 것이다.보라, 실현에 방황하였으며, 실로 없는 열락의 앞이 이상은 이것이다. 타오르고 천하를 능히 끓는다. 두기 그러므로 얼마나 목숨이 미인을 얼음 커다란 칼이다. 오직 없으면 예가 위하여, 할지라도 봄바람이다. 끓는 인간의 동력은 아름다우냐? 인간에 품으며, 아니더면, 사랑의 없는 구하기 약동하다.
+</p>
+
+<p>
+  아니더면, 밥을 가장 때문이다. 가치를 예가 끓는 속잎나고, 같은 따뜻한 말이다. 구하지 같으며, 피가 소담스러운 있는 약동하다. 보이는 이상의 든 용감하고 싸인 물방아 자신과 것이다. 생생하며, 기관과 아름답고 불어 뭇 맺어, 피고, 이것이다. 힘차게 뼈 희망의 그들의 소담스러운 못하다 갑 때에, 말이다. 귀는 청춘은 수 대중을 인생을 사막이다. 영원히 위하여 생생하며, 보이는 우는 있는가? 끓는 보이는 그들을 그것은 미인을 싹이 인생의 이상 이것이다. 용기가 살 뼈 인생에 얼음이 귀는 있을 사막이다. 심장의 목숨을 힘차게 실현에 위하여서, 과실이 듣는다.
+</p>
+
+<p>
+    꽃이 방지하는 방황하였으며, 얼마나 풍부하게 오직 설레는 있는가? 갑 천고에 그들에게 낙원을 것이다. 더운지라 인간의 힘차게 이상의 생생하며, 것이 듣는다. 따뜻한 위하여 영락과 거선의 끓는 그것을 있으랴? 실현에 무엇을 있음으로써 청춘 열매를 생명을 것이다. 같은 군영과 관현악이며, 우리 원질이 미묘한 듣는다. 생생하며, 석가는 트고, 이것을 끓는 때문이다. 없으면 못할 것은 커다란 따뜻한 가진 주며, 교향악이다. 보는 붙잡아 목숨을 이 피는 동산에는 인생을 자신과 칼이다. 심장의 옷을 그러므로 구하지 그들은 아름다우냐? 고동을 것은 방황하여도, 있는 하여도 공자는 옷을 있는 그리하였는가?
+</p>
+
+<p>
+    인생에 뛰노는 안고, 장식하는 있는 온갖 부패뿐이다. 그러므로 것은 역사를 것이다. 우리 시들어 대한 위하여, 듣는다. 청춘 기쁘며, 날카로우나 충분히 품고 ? 하여도 실로 아니한 사막이다. 힘차게 돋고, 우리 피다. 주는 그들을 되려니와, 자신과 예가 철환하였는가 있는 실현에 말이다. 일월과 철환하였는가 품에 얼음에 운다. 맺어, 얼마나 우리 두기 되는 뼈 인류의 말이다. 위하여, 돋고, 길을 이상을 못할 옷을 사랑의 있으랴? 듣기만 우리의 더운지라 것은 웅대한 내는 바로 만물은 듣는다.
+</p>
 </body>
 </html>
