--- a/01_html_ex_12.html
+++ b/01_html_ex_12.html
@@ -11,6 +11,30 @@
 <table>
   <tr>
     <td>
+      <!-- xmp 태그는 구버전에서 사용된 태그, 현재는 사용되지 않음 -->
+      <xmp>
+
+        <!DOCTYPE html>
+        <html lang="en">
+        <head>
+          <meta charset="UTF-8">
+          <title></title>
+        </head>
+        <body>
+
+        </body>
+        </html>
+
+      </xmp>
+
+    </td>
+  </tr>
+</table>
+
+
+<table>
+  <tr>
+    <td>
       <pre>
         <!--pre 태그 안의 내용은 그대로 보인다. (텍스트는 텍스트로)-->
       </pre>
