--- a/02_css_ex_09.html
+++ b/02_css_ex_09.html
@@ -68,6 +68,12 @@
       border-left-color
       ...
     */
+
+    /* box-sizing:border-box 적용
+     => padding, border가 width/height에 포함
+     => width/height 가 margin을 뺀 박스 전체길이가 됨
+     */
+
   </style>
 </head>
 <body>
