--- a/02_css_ex_12.html
+++ b/02_css_ex_12.html
@@ -58,7 +58,7 @@
       background:magenta;
       position:fixed;
       top:0;
-      left:0; 숫자값이 /*0일때 단위를 쓰지 않음*/ㅑ
+      left:0; /*숫자값이 0일때 단위를 쓰지 않음*/
     }
   </style>
 </head>
