--- a/02_css_ex_19.html
+++ b/02_css_ex_19.html
@@ -143,7 +143,7 @@
 
   <section class="a">
 
-    <div class="a-1"></div>
+    <section class="a-1"></section>
 
     <section class="a-2">
       <div class="a-2-1"></div>
