--- a/01_html_ex_11.html
+++ b/01_html_ex_11.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>HTML 연습 11</title>
+  <!-- FORM 요소 연습 -->
 </head>
 <body>
 
@@ -90,6 +91,15 @@
   </div>
 
 </fieldset>
+
+<h1>button 요소</h1>
+<div>
+  <!-- CSS 표현, 활용이 input 버튼 보다 더 자유로움 -->
+  <input type="button" value="버튼" />
+  <button type="button">버튼</button>
+  <button type="reset">취소</button>
+  <button type="submit">전송</button>
+</div>
 
 </body>
 </html>
