--- a/02_css_ex_03.html
+++ b/02_css_ex_03.html
@@ -25,6 +25,9 @@
     div>a:hover{
       color:red;
     }
+
+    /* 가장 마지막 태그가 대상 */
+    /* p 태그가 대상 */
     div>a:hover+p{
       color:skyblue;
     }
@@ -47,7 +50,7 @@
 
 <p>
   가상 클래스(Pseudo Class)란, <br />
-  태그 요소의 세부 조건이나 특수 상태를 선택할 수 있게 해주는 선택자
+  태그 요소의 <strong>세부 조건</strong>이나 <strong>특수 상태</strong>를 선택할 수 있게 해주는 선택자
 </p>
 
 <p>
