--- a/05_js_ex_18.html
+++ b/05_js_ex_18.html
@@ -20,6 +20,17 @@
       // 1-4. prependTo
       $('<div>prependTo 추가 노드</div>').prependTo('.box2').css('background','pink');
 
+      // 2. 노드 삭제  //ex) .box3>p or box3 p or.children ----> children 함수를 사용하던,  > 직계자식요소, 띄어쓰기 하여 포함된 자손
+      $('.box3').children().remove();
+
+      // 3. 노드 수정/추가
+      // 3-1. html() 함수
+      $('.box4').html('<div>수정된 내용</div>');
+
+      // 3-2. text() 함수
+      $('.box5').text('<div>수정된 내용</div>');
+
+      $('.box6').html('<div></div>');
     });
   </script>
 </head>
@@ -46,6 +57,16 @@
     1-4. prependTo() 함수
 
       - 대상의 앞쪽에 노드를 추가
+
+  2. 노드 삭제
+
+      - remove() 함수
+
+  3. 노드 내용 수정/추가
+
+      3-1. html() 함수
+
+      3-2.
 </pre>
 
 <div class="box1">
@@ -59,6 +80,26 @@
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam assumenda beatae consequatur cupiditate esse, est exercitationem explicabo iure neque nisi nostrum odit perferendis porro quae rerum sed similique vel.
   </p>
 </div>
+
+<div class="box3">
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam assumenda beatae consequatur cupiditate esse, est exercitationem explicabo iure neque nisi nostrum odit perferendis porro quae rerum sed similique vel.
+  </p>
+</div>
+
+<div class="box4">
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam assumenda beatae consequatur cupiditate esse, est exercitationem explicabo iure neque nisi nostrum odit perferendis porro quae rerum sed similique vel.
+  </p>
+</div>
+
+<div class="box5">
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam assumenda beatae consequatur cupiditate esse, est exercitationem explicabo iure neque nisi nostrum odit perferendis porro quae rerum sed similique vel.
+  </p>
+</div>
+
+<div class="box6"></div>
 
 </body>
 </html>
