--- a/05_js_ex_18.html
+++ b/05_js_ex_18.html
@@ -11,7 +11,7 @@
       // 1-1. append
       $('.box1').append('<div>append 추가 노드</div>').css('background','yellow');
 
-      // 1-2. appendTo   // append 와 차이점은 대상의 위치를 먼저 지정해줌
+      // 1-2. appendTo   // append 와 차이점은 대상의 위치를 먼저 지정해줌 > jquery 형태와 다르게 대상의 위치가 먼저나오므로 append 를 사용할 수 있을 경우 append 를 되도록 사용하자.. prepend 도 같다.
       $('<div>appendTo 추가 노드</div>').appendTo('.box2').css('background','pink');
 
       // 1-3. prepend
@@ -30,7 +30,7 @@
       // 3-2. text() 함수
       $('.box5').text('<div>수정된 내용</div>');
 
-      $('.box6').html('<div></div>');
+      $('.box6').html('<div>수정된 내용</div>');
     });
   </script>
 </head>
