--- a/05_js_ex_21.html
+++ b/05_js_ex_21.html
@@ -27,6 +27,49 @@
       top:3px;
       right:3px;
     }
+
+    .image-wrap{
+      width:215px;
+    }
+    /* 큰 사진의 가로길이 : 215px */
+    .image-top{
+      width:215px;
+      height:215px;
+      overflow:hidden;
+    }
+    .image-big.full-width{
+      width:100%;
+    }
+    .image-big.full-height{
+      height:100%;
+    }
+    .image-bottom{
+      width:215px;
+      margin-top:4px;
+    }
+    .image-bottom:after{
+      content:"";
+      display:block;
+      clear:both;
+    }
+
+    /* 작은 사진의 가로길이 : 69px , 사이여백 : 4px */
+    .image-bottom-wrap{
+      width:69px;
+      height:69px;
+      margin-right:4px;
+      float:left;
+      overflow:hidden;
+    }
+    .image-bottom-wrap:last-child{
+      margin-right:0;
+    }
+    .image-thumbnail.full-width{
+      width:100%;
+    }
+    .image-thumbnail.full-height{
+      height:100%;
+    }
   </style>
   <script src="lib/jquery-3.2.1.min.js"></script>
   <script>
@@ -36,12 +79,13 @@
 
       $('.anchor').on('click', function(e){
 
+
         // 이벤트를 제어하자 => event 객체 사용해서 기능
         // 1. on 함수에 인자로 넣어주는 함수에 매개변수 사용
         // 2. 매개변수가 event 객체로 만들어짐
         console.log(e);  // << 이벤트 객체 모양
 
-        // 태극의 기본동작을 막는 기능
+        // 태그의 기본동작을 막는 기능
         e.preventDefault()    // a태그(링크) 클릭 시 페이지 상단으로 튀는거 방지 무조건 사용해야함 (gnb, lnb)
 
         // a = a + 1 => a += 1
@@ -58,6 +102,89 @@
         $('body').append( layerPop );
 
       });
+
+      var calculateRatio = {
+
+        // jQuery DOM 대상을 저장하는 프로퍼티
+        $imageTop : $('.image-top'),
+        $imageBig : $('.image-big'),
+        $imageThumb : $('.image-thumbnail'),
+        // 해당 부분의 값을 저장하는 객체 프로퍼티
+        areaWidth : 0,
+        areaHeight : 0,   // 객체 property 에는 this 를 사용할 수 없음 .. 오류
+        imageWidth : 0,
+        imageHeight : 0,
+        areaRatio : 0,
+        imageRatio : 0,
+        // 해당 부분의 값을 계산하는 메소드
+        // 마스크 영역 계산
+        areaValue : function(){
+          this.areaWidth = parseInt(this.$imageTop.css('width'));
+          this.areaHeight = parseInt(this.$imageTop.css('height'));
+          this.areaRatio = this.areaWidth / this.areaHeight;
+        },
+        // 이미지 계산
+        imageValue : function($image){
+          this.imageWidth = parseInt( $image.css('width'));
+          this.imageHeight = parseInt( $image.css('height'));
+          this.imageRatio = this.imageWidth / this.imageHeight;
+        },
+        // 큰 이미지에 적용
+        applyBig : function(){
+
+          this.areaValue();
+
+          this.imageValue(this.$imageBig);
+
+          if( this.areaRatio > this.imageRatio){
+            this.$imageBig.removeClass('full-height').addClass('full-width');
+          } else {
+            this.$imageBig.removeClass('full-width').addClass('full-height');
+          }
+        },
+        // 작은 이미지에 적용
+        applyThumb : function(){
+
+          this.areaValue();
+
+          for(var i=0; i<this.$imageThumb.length; i++){
+
+            this.imageValue(this.$imageThumb.eq(i));
+
+            if( this.areaRatio > this.imageRatio){
+              this.$imageThumb.eq(i).addClass('full-width');
+            } else {
+              this.$imageThumb.eq(i).addClass('full-height');
+            }
+          }
+        },
+        // 마우스 오버 시 이미지 변경 함수
+        changeImage : function( $overImage ){
+          var src = $overImage.children().attr('src');
+
+          $('.image-big').attr('src', src);
+        }
+      };
+
+      // 함수 실행
+      calculateRatio.applyBig();
+
+      calculateRatio.applyThumb();
+
+      // 이벤트 실행
+      $('.image-bottom-wrap').on('mouseenter', function(){
+
+        calculateRatio.changeImage( $(this) );
+        calculateRatio.applyBig();
+
+      });
+
+      $('.image-wrap').on('mouseleave', function(){
+
+        calculateRatio.changeImage( $('.image-bottom-wrap').eq(0) );
+        calculateRatio.applyBig();
+
+      })
 
     });
 
@@ -115,6 +242,23 @@
 
 <div>
   <a href="http://www.naver.com" class="anchor">네이버 링크</a>
+</div>
+
+<div class="image-wrap">
+  <div class="image-top">
+    <img src="images/클림트.jpg" class="image-big"/>
+  </div>
+  <div class="image-bottom">
+    <div class="image-bottom-wrap">
+      <img src="images/클림트.jpg" class="image-thumbnail" />
+    </div>
+    <div class="image-bottom-wrap">
+      <img src="images/클림트2.jpg" class="image-thumbnail" />
+    </div>
+    <div class="image-bottom-wrap">
+      <img src="images/반고흐2.jpg" class="image-thumbnail" />
+    </div>
+  </div>
 </div>
 
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
